--- a/signup.html
+++ b/signup.html
@@ -2277,7 +2277,7 @@
     <div style="display: flex; margin-bottom: 0px;"><h3>Email</h3></div>
     <input type="email" style="width: 95%; height:40px; margin-bottom: 20px;" id="mail">
     <div style="margin-top: 30px; margin-bottom: 30px; color: gray;">By tapping Next, you agree to our Privacy Policy and Terms & Conditions.</div>
-<input id="next" type="button" value="Next" style="width: 95%; height:40px; color: white; background-color: black;cur ">
+<input id="next" type="button" value="Next" style="width: 95%; height:40px; color: white; background-color: black;cur>
 </div>
 <div id="footer">
     <div class="foot">
@@ -2336,12 +2336,12 @@
       
         <div id="foot-col" class="foot-column">
             <ul>
-                <div style="display: flex;"><img src="https://raw.githubusercontent.com/vibrantachintya/nordstrom/main/images/mobile.svg" alt="facebook" style="width:18px;margin-right:5px;"/>Get our apps</div>
+                <div style="display: flex;"><img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/mobile.svg" alt="facebook" style="width:18px;margin-right:5px;"/>Get our apps</div>
                 <div style="display:flex;gap:15px;margin-top: 20px;">
-                    <img src="https://raw.githubusercontent.com/vibrantachintya/nordstrom/main/images/insta.svg" alt="facebook" style="width:24px;"/>
-                    <img src="https://raw.githubusercontent.com/vibrantachintya/nordstrom/main/images/pin.svg" alt="facebook" style="width:24px;"/>
-                    <img src="https://raw.githubusercontent.com/vibrantachintya/nordstrom/main/images/twitter.svg" alt="facebook" style="width:24px;"/>
-                    <img src="https://raw.githubusercontent.com/vibrantachintya/nordstrom/main/images/fb.svg" alt="facebook" style="width:24px;"/>
+                    <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/insta.svg" alt="facebook" style="width:24px;"/>
+                    <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/pin.svg" alt="facebook" style="width:24px;"/>
+                    <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/twitter.svg" alt="facebook" style="width:24px;"/>
+                    <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/fb.svg" alt="facebook" style="width:24px;"/>
                 </div>
             <ul>
         </div>
