--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <strong>Shipping outside of the U.S. or Canada?</strong>
                         <a title="Learn About International Shipping" href="">Learn About International Shipping</a>
                     </p>
-                    <button href=""><img style="background-color: red;" src="https://n.nordstrommedia.com/alias/IN.gif"><span>India</span></button>
+                    <button href=""><img style="background-color: black;" src="https://n.nordstrommedia.com/alias/IN.gif"><span>India</span></button>
                 </div>
                 <div class="clear"></div>
             </div>
