--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div id="navs">
                 <button id="red" class="navEle" onmouseover="dropDown('Holiday Gifts')">Holiday Gifts</button>
-                <button class="navEle" onmouseover="dropDown('Women')" onmouseleave="removeSignBar()">Women</button>
+                <button class="navEle" onmouseover="dropDown('Women')" >Women</button>
                 <button class="navEle" onmouseover="dropDown('Men')">Men</button>
                 <button class="navEle" onmouseover="dropDown('Kids')">Kids</button>
                 <button class="navEle" onmouseover="dropDown('Young Adult')">Young Adult</button>
