--- a/footer.html
+++ b/footer.html
@@ -5,81 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="footer.css">
+   <!-- <link rel="stylesheet" href="footer.css"> -->
+   <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="foot">
-        <div class="foot-column">
-           <ul>
-               <li><label class="head">Customer Service</label></li>
-               <li>Contact Us</li>
-               <li>Order Status</li>
-               <li>Shipping</li>
-               <li>Returns & amp;exchanges</li>
-               <li>Shipping</li>
-               <li>Product recalls</li>
-           </ul>
-        </div>
-        <div class="foot-column">
-              <ul>
-                  <li><label class="head">
-                      Stores & amp: Events
-                  </label>
-                  </li>
-                  <li> Stores & amp: Events</li>
-                  <li>Carrers</li>
-                  <li>Corporate Resposibility</li>
-                  <li>Diversity Including & amp: Belonging</li>
-                  <li>Get Email Updates</li>
-                  <li>Nordstrom Blog</li>
-              </ul>
-        </div>
-        <div class="foot-column">
-          <ul>
-              <li><label class="head">Service</label></li>
-              <li>Personal Styling</li>
-              <li>Alteration & amp: Tailering</li>
-              <li>Spa Nordstrom</li>
-              <li>Nordstrom Restuarant</li>
-              <li> Gift Cards</li>
-          </ul>
-        </div>
-        <div class="foot-column">
-          <ul>
-              <li><label class="head">Nordstrom Cards</label></li>
-              <li>Pay My Bill</li>
-              <li>Manage my Nordstrom Cards</li>
-          </ul>
-        </div>
-        <div class="foot-column">
-         <ul>
-             <li><label class="head">Nordstrom Inc</label></li>
-             <li>Nordstrom Rack</li>
-             <li>Nordstrom Canada</li>
-             <li>Trunk Club</li>
-             <li>Investor Relations</li>
-             <li>Press Release</li>
-         </ul>
-        </div>
-      
-    <div class="foot-col">
-        <ul>
-            <li style="padding:5px"><img src="./images/mobile.svg" alt="facebook" style="width:18px;margin-right:0px;padding:5px"/>Get our apps</li>
-            <div style="display:flex;gap:15px;margin-top: 20px;">
-                <img src="./images/insta.svg" alt="facebook" style="width:24px;"/>
-                <img src="./images/pin.svg" alt="facebook" style="width:24px;"/>
-                <img src="./images/twitter.svg" alt="facebook" style="width:24px;"/>
-                <img src="./images/fb.svg" alt="facebook" style="width:24px;"/>
+    <div id="footer">
+        <div class="foot">
+            <div class="foot-column">
+               <ul>
+                   <li><label class="head">Customer Service</label></li>
+                   <li>Contact Us</li>
+                   <li>Order Status</li>
+                   <li>Shipping</li>
+                   <li>Returns &amp;exchanges</li>
+                   <li>Shipping</li>
+                   <li>Product recalls</li>
+               </ul>
             </div>
-        <ul>
+            <div class="foot-column">
+                  <ul>
+                      <li><label class="head">
+                          Stores &amp; Events
+                      </label>
+                      </li>
+                      <li> Stores &amp; Events</li>
+                      <li>Carrers</li>
+                      <li>Corporate Resposibility</li>
+                      <li>Diversity Including &amp; Belonging</li>
+                      <li>Get Email Updates</li>
+                      <li>Nordstrom Blog</li>
+                  </ul>
+            </div>
+            <div class="foot-column">
+              <ul>
+                  <li><label class="head">Service</label></li>
+                  <li>Personal Styling</li>
+                  <li>Alteration &amp; Tailering</li>
+                  <li>Spa Nordstrom</li>
+                  <li>Nordstrom Restuarant</li>
+                  <li> Gift Cards</li>
+              </ul>
+            </div>
+            <div class="foot-column">
+              <ul>
+                  <li><label class="head">Nordstrom Cards</label></li>
+                  <li>Pay My Bill</li>
+                  <li>Manage Cards</li>
+              </ul>
+            </div>
+            <div class="foot-column">
+             <ul>
+                 <li><label class="head">Nordstrom Inc</label></li>
+                 <li>Nordstrom Rack</li>
+                 <li>Nordstrom Canada</li>
+                 <li>Trunk Club</li>
+                 <li>Investor Relations</li>
+                 <li>Press Release</li>
+             </ul>
+            </div>
+          
+            <div id="foot-col" class="foot-column">
+                <ul>
+                    <div style="display: flex;"><img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/mobile.svg" alt="facebook" style="width:18px;margin-right:5px;"/>Get our apps</div>
+                    <div style="display:flex;gap:15px;margin-top: 20px;">
+                        <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/insta.svg" alt="facebook" style="width:24px;"/>
+                        <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/pin.svg" alt="facebook" style="width:24px;"/>
+                        <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/twitter.svg" alt="facebook" style="width:24px;"/>
+                        <img src="https://raw.githubusercontent.com/HelloMoto069/NORDSTORM-Clone/main/images/fb.svg" alt="facebook" style="width:24px;"/>
+                    </div>
+                <ul>
+            </div>
+        </div>
+        <div class="foot-second">
+            <p>Your Privacy Rights</p>
+            <p>Dont Sell My Info</p>
+            <p>Terms &amp; Conditions</p>
+            <p>Interest Based Ads</p>
+            <p>&copy; 2021 Nordstrom, Inc</p>
+        </div>
     </div>
-    </div>
-    <div class="foot">
-        <p>Your Privacy Rights</p>
-        <p>Dont Sell My Info</p>
-        <p>Terms & amp; Conditions</p>
-        <p>Intrest Based Ads</p>
-        <p>copy & 2021 Nordstrom,Inc</p>
-    </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
